# asistrader

./: .gitignore  IRR-Examples.numbers  README.md  To do list.numbers  Traders Fer.xlsx  automated-strategies-plan.md  concept.md  docker-compose.dev.yml  docker-compose.yml  notes.md  ordered-trades-plan.md  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_strategy.py  003_add_market_data.py  004_add_authentication.py  005_add_paper_trade.py  006_add_layered_sltp.py  007_migrate_to_exit_levels_only.py  008_add_ordered_status.py  009_add_canceled_status.py  010_add_order_type_and_time_in_effect.py  011_add_fund_events.py  012_rename_paper_trade_to_auto_detect.py  013_add_ticker_currency_and_price_hint.py  014_add_benchmarks.py  015_multi_currency.py  016_repair_legacy_event_currencies.py  017_add_trade_date_ordered.py  018_add_detection_margin_and_alert_dismissals.py  019_add_radar_presets.py  020_backfill_null_order_type_limit.py  021_automated_strategies.py  022_add_sweep_results_cache.py
backend/src/asistrader/: __init__.py  main.py
backend/src/asistrader/api/: auth.py  (+9 more)
backend/tests/: conftest.py
backend/tests/test_api/: conftest.py  test_alert_dismissal.py  test_auth_me.py  test_detection_trace.py  test_dispersion_momentum_draft.py  test_exit_level_hit.py  test_fund.py  test_fx.py  test_irr.py  test_market_data.py  test_radar_presets.py  test_strategy_draft.py  test_strategy_engines.py  test_trades.py
backend/tests/test_cli/: test_detect.py
(+395 files in other folders)
